--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
         <module>demo-jpa</module>
         <module>demo-h2</module>
         <module>demo-sakila</module>
+        <module>demo-security-hello-world</module>
+        <module>demo-security-h2</module>
+        <module>demo-repository-h2</module>
     </modules>
 
     <properties>
@@ -40,6 +43,11 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-jpa</artifactId>
+                <version>2.6.6</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
                 <version>2.6.6</version>
             </dependency>
 
